--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="src\ui\views\settings_license.c">
       <Filter>源文件\ui\views</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\components\loading.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
