--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm-run-all build-bin build-assets",
-    "build-bin": "xmake --build",
+    "build-bin": "xmake",
     "build-assets": "npm-run-all build-css build-vendor-assets",
-    "build-vendor-assets": "cp-cli .repos/lcui.css/dist/assets app/assets",
+    "build-vendor-assets": "cp-cli setup/repos/lc-design/dist/assets app/assets",
     "build-css": "npm-run-all build-css-main build-css-themes",
     "build-css-themes": "node-sass --output app/assets/stylesheets/themes --output-style expanded src/scss/themes/default.scss",
     "build-css-main": "node-sass --output app/assets/stylesheets --output-style expanded src/scss/main.scss"
@@ -32,7 +32,7 @@
   },
   "homepage": "https://github.com/lc-soft/LC-Finder#readme",
   "devDependencies": {
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.3"
   },
   "dependencies": {}
